--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,11 @@
       rel="stylesheet"
     />
 
+    <link
+      href="https://fonts.googleapis.com/css?family=Lora:300,400,500,700"
+      rel="stylesheet"
+    />
+
     <!-- Animate.css -->
     <link rel="stylesheet" href="css/animate.css" />
     <!-- Icomoon Icon Fonts-->
