--- a/public/index.html
+++ b/public/index.html
@@ -52,6 +52,8 @@
     <link rel="stylesheet" href="css/owl.theme.default.min.css" />
     <!-- Theme style  -->
     <link rel="stylesheet" href="css/style.css" />
+    <!-- Ekko Lightbox  -->
+    <link rel="stylesheet" href="css/ekko-lightbox.css" />
 
     <!-- Modernizr JS -->
     <script src="js/modernizr-2.6.2.min.js"></script>
@@ -79,6 +81,8 @@
     <script src="js/owl.carousel.min.js"></script>
     <!-- Counters -->
     <script src="js/jquery.countTo.js"></script>
+    <!-- Ekko Lightbox  -->
+    <script src="js/ekko-lightbox.min.js"></script>
 
     <!-- MAIN JS -->
     <script src="js/main.js"></script>
