Design tweaks, metadata, icons, clean code

--- a/public/index.html
+++ b/public/index.html
@@ -5,23 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Andrew Keymolen</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="" />
-    <meta name="keywords" content="" />
-    <meta name="author" content="" />
+    <meta name="description" content="Analysing existing projects, developing new features, debugging, testing, production follow-up, incidents handling, etc. Thats what I do! Now a certified SCRUM Master, I'm eager to take on the management of new exciting projects. I'm Andrew Keymolen, welcome to my website." />
+    <meta name="keywords" content="Andrew Keymolen IT Photography Full Stack Developer Scrum Master Mobile Android" />
+    <meta name="author" content="Andrew Keymolen" />
 
     <!-- Facebook and Twitter integration -->
-    <meta property="og:title" content="" />
-    <meta property="og:image" content="" />
-    <meta property="og:url" content="" />
-    <meta property="og:site_name" content="" />
-    <meta property="og:description" content="" />
-    <meta name="twitter:title" content="" />
-    <meta name="twitter:image" content="" />
-    <meta name="twitter:url" content="" />
-    <meta name="twitter:card" content="" />
+    <meta property="og:title" content="Andrew Keymolen" />
+    <meta property="og:image" content="https://andrewkeymolen.com/static/media/Photography%20(109).e8546331.jpg" />
+    <meta property="og:url" content="https://andrewkeymolen.com/" />
+    <meta property="og:site_name" content="Andrew Keymolen" />
+    <meta property="og:description" content="Full Stack, mobile & web dev + Photographer. Now a Scrum master, welcome to my website." />
+    <meta name="twitter:title" content="Andrew Keymolen" />
+    <meta name="twitter:image" content="https://andrewkeymolen.com/static/media/Photography%20(109).e8546331.jpg" />
+    <meta name="twitter:description" content="Full Stack, mobile & web dev + Photographer. Now a Scrum master, welcome to my website." />
+    <meta name="twitter:url" content="https://andrewkeymolen.com/" />
+    <meta name="twitter:card" content="summary_large_image" />
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <link rel="shortcut icon" href="favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#000000">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
 
     <link
       href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700"
