change share image

--- a/public/index.html
+++ b/public/index.html
@@ -11,12 +11,12 @@
 
     <!-- Facebook and Twitter integration -->
     <meta property="og:title" content="Andrew Keymolen" />
-    <meta property="og:image" content="https://andrewkeymolen.com/static/media/Photography%20(109).e8546331.jpg" />
+    <meta property="og:image" content="https://andrewkeymolen.com/static/media/CentralizeProject.fd058656.jpg" />
     <meta property="og:url" content="https://andrewkeymolen.com/" />
     <meta property="og:site_name" content="Andrew Keymolen" />
     <meta property="og:description" content="Full Stack, mobile & web dev + Photographer. Now a Scrum master, welcome to my website." />
     <meta name="twitter:title" content="Andrew Keymolen" />
-    <meta name="twitter:image" content="https://andrewkeymolen.com/static/media/Photography%20(109).e8546331.jpg" />
+    <meta name="twitter:image" content="https://andrewkeymolen.com/static/media/CentralizeProject.fd058656.jpg" />
     <meta name="twitter:description" content="Full Stack, mobile & web dev + Photographer. Now a Scrum master, welcome to my website." />
     <meta name="twitter:url" content="https://andrewkeymolen.com/" />
     <meta name="twitter:card" content="summary_large_image" />
